<resources>
    <string name="app_name">NoteHive</string>
    <string name="version">Version: %1$s</string>
    <string name="archive">Archive</string>
    <string name="add_note">Create Note</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="about_application">About application</string>
    <string name="github_repo"><u>Source code on GitHub</u></string>
    <string name="mit_license"><u>Distributed under MIT license</u></string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="note">Note</string>
    <string name="note_title">Title</string>
    <string name="menu">Menu</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="add_to_archive">Add to archive</string>
    <string name="remove_from_archive">Remove from archive</string>
    <string name="delete">Delete</string>
    <string name="enter_title">Enter the note title...</string>
    <string name="enter_text">Enter the text of the note...</string>
    <string name="note_text">Text...</string>
    <string name="note_date">Date</string>
    <string name="note_pinned">Note pinned</string>
    <string name="note_unpinned">Note unpinned</string>
    <string name="note_archived">Note add to archive</string>
    <string name="note_unarchived">Note remove from archive</string>
    <string name="note_deleted">Note deleted</string>
    <string name="theme_applied">Theme applied:</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_green">Green</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>
    <string name="language_german">German</string>
    <string name="language_french">French</string>
    <string name="language_spanish">Spanish</string>
</resources>
