<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/languageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/about_application"
            android:textColor="?android:attr/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/viewSeparator"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/appLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="18dp"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColor"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/appVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/version"
        android:textSize="16sp"
        android:textColor="?android:attr/textColor"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/githubLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/github_repo"
        android:textSize="16sp"
        android:textColor="?android:attr/textColor"
        android:clickable="true"
        android:focusable="true"
        android:autoLink="web"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/licenseLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mit_license"
        android:textSize="16sp"
        android:textColor="?android:attr/textColor"
        android:clickable="true"
        android:focusable="true"
        android:autoLink="web"
        android:layout_marginBottom="8dp"/>

</LinearLayout>
