<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/backgroundColor"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/searchIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="?android:attr/textColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <EditText
            android:id="@+id/searchField"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/enter_title"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="?android:attr/textColor"
            android:textColorHint="?android:attr/textColorHint"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/closeSearchIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_close"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/viewSeparator"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationBar"
        tools:listitem="@layout/item_note" />

    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/noteBackground"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/archiveButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/side_button_background"
            android:contentDescription="@string/archive"
            android:src="@drawable/ic_archive" />

        <ImageButton
            android:id="@+id/addNoteButton"
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/central_button_background"
            android:contentDescription="@string/add_note"
            android:src="@drawable/ic_add" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/side_button_background"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
