<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:dividerPadding="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/note_title"
            android:maxLength="25"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="?android:attr/textColor"
            android:textColorHint="?android:attr/textColorHint"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_more" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/viewSeparator" />

    <EditText
        android:id="@+id/noteContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/enter_text"
        android:textColor="?android:attr/textColor"
        android:textColorHint="?attr/textColorContent"
        android:gravity="start|top"
        android:background="@android:color/transparent"
        android:textSize="16sp"
        android:padding="16dp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        tools:ignore="Autofill,TextFields" />

</LinearLayout>
